--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,18 @@
 		</dependency>
 		<!-- End Swagger -->
 
+		<!-- Apache Commons -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<!-- End Apache Commons -->
+
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
