--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,7 @@
 			**/diff/DiffApplication.java,
 			**/json/*,
 			**/config/**/*,
-			**/domains/**,
-			**/dto/*
+			**/domains/**
 		</sonar.coverage.exclusions>
 	</properties>
 
@@ -48,10 +47,6 @@
 		</dependency>
 		<!-- end undertow configuration -->
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
