--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: '2'
 services:
 
   mongo:
     image: mongo:latest
-    hostname: mongo
-    container_name: mongo
+    hostname: mongo-diff
+    container_name: mongo-diff
     restart: always
     ports:
       - "27017:27017"
